# dotfiles

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  zshrc.system
brew/: Brewfile  README.md
config/: CLAUDE.md
config/1password/: agent.sock
config/argocd/: config
config/brew/: Brewfile  backup.sh  install.sh
config/cheat/: conf.yml
config/claude/: CLAUDE.md  README.md  claude.sh  config.yaml  memory.yml  rules.yaml  settings.json
config/claude-code/: config.yaml  rules.yaml
config/claude-code/scripts/: get_1password_key.sh  get_github_token.sh
config/claude/contexts/: aws.md  kubernetes.md
config/claude/scripts/: get_1password_key.sh
config/colima/: ssh_config
config/colima/buildx/: colima.yaml
config/colima/default/: colima.yaml
config/direnv/: direnvrc
config/expressvpn/: browser_helper
config/gh/: config.yml
config/git/: aliases  commit-template  config  ignore  pre-commit-config.yaml
config/git/config.d/: personal
config/git/hooks/: install-hooks.sh  (+1 more)
config/iterm2/: AppSupport
config/k9s/: config.yaml
config/macos/: preferences.sh
config/npm/: npmrc
config/nvim/: init.lua  lazy-lock.json
config/procs/: config.toml
config/tmux/: tmux.conf
config/tree/: treerc
config/uv/: uv.toml
config/windsurf/: .windsurf.rc.json  README.md  backup.sh  install.sh
config/wtf/: config.yml
config/xbuild/: pkgconfig-cache-2.xml
config/zsh/: .p10k.zsh  .zshrc  README.md
curl/: curlrc
gh/: hosts.yml
git/: config
git/config.d/: work
zsh/: .p10k.zsh  .zshrc  zshrc
(+6 files in other folders)
