[project]
name = "dotfiles"
version = "0.1.0"
description = "Personal configuration files and system setup for development environments"
authors = [
    {name = "shawn 👊", email = "user@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]



[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
]
